--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 html,body{
     width: 100%;
     height: 100vh;
+    background-color: chocolate;
 }
 
 header{
@@ -26,12 +27,12 @@ header{
     width: 27rem;
     height: 9rem;
 }
-body,html{
+/* body,html{
     width: 100%;
     height: 100vh;
     background-color: chocolate;
     
-}
+} */
 
 
 #configure{
@@ -144,7 +145,7 @@ button:hover {
 
 
 
-/* @media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
 
     header{
         background-color: yellow;
@@ -171,7 +172,7 @@ button:hover {
         font-size: 1.4rem;
         background-color: greenyellow;
     }
-  } */
+  }
 
 @media screen and (min-width: 675px) and (max-width: 767px){
     
@@ -221,8 +222,6 @@ button:hover {
     }
 }
     
-
-
 
 @media screen and (min-width: 260px)and (max-width: 404px){
         
