--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 html,body{
     width: 100%;
     height: 100vh;
-    /* background-color: chocolate; */
 }
 
 header{
@@ -27,12 +26,12 @@ header{
     width: 27rem;
     height: 9rem;
 }
-/* body,html{
+body,html{
     width: 100%;
     height: 100vh;
     background-color: chocolate;
     
-} */
+}
 
 
 #configure{
